# Master_thesis_code

./: LICENSE  README.md
code/FSI_Toy_problem_parallel/: Manifest.toml  configure
code/FSI_Toy_problem_parallel/postprocess/: readme.md
code/FSI_Toy_problem_parallel/postprocess/tmp/: readme.md
code/FSI_Toy_problem_parallel/shared_lib/: mpicpp.jl
code/FSI_Toy_problem_parallel/src/: CMakeLists.txt  headers_and_helpers.hpp  mpicpp.cpp  parameters-2d.xml
code/FSI_Toy_problem_parallel/test/: ThinFSIparallel.jl
code/FSI_Toy_problem_serial/: Manifest.toml  Project.toml  ThinFSIFunc.jl  testing1.jl  testing2.jl  testing3.jl  testing4.jl  testing5.jl
code/FSI_Toy_problem_serial/mesh/: meshReader.jl  square.geo  square.json  square.msh  square_0.vtu  square_1.vtu  square_2.vtu
code/FSI_Toy_problem_serial/results/: DNThinFSIFluids.pvd  DNThinFSIFluidsNew.pvd  DNThinFSISolids.pvd  DNThinFSISolidsNew.pvd  readme.md
code/Non_Overalpping_methods/: DNanalysis1.jl  DNanalysis2.jl  DNanalysis3.jl  DNanalysis4.jl  DRanalysis1.jl  DRanalysis2.jl  DRanalysis3.jl  DRanalysis4.jl  DRanalysis5.jl  DRanalysis6.jl  DRanalysis7.jl  DRanalysis8.jl  DRanalysis9.jl  Manifest.toml  Project.toml  RNanalysis1.jl  RNanalysis2.jl  RNanalysis3.jl  RNanalysis4.jl  RNanalysis5.jl  RNanalysis6.jl  RNanalysis7.jl  RNanalysis8.jl  RNanalysis9.jl  RRanalysis1.jl  RRanalysis2.jl  RRanalysis3.jl  RRanalysis4.jl  RRanalysis5.jl  RRanalysis6.jl  RRanalysis7.jl  RRanalysis8.jl  RRanalysis9.jl  modrr1  monolithic_system.jl
code/Non_Overalpping_methods/gmshFiles/: square.geo  square.msh  tutmesh.geo  tutmesh.msh  tutmesh1.geo  tutmesh1.msh  tutmesh2.geo  tutmesh2.msh  tutmesh3.geo  tutmesh3.msh  tutmesh4.geo  tutmesh4.msh
code/Non_Overalpping_methods/jsonFiles/: square.json  tutmesh1.json  tutmesh2.5.json  tutmesh2.json  tutmesh3.json  tutmesh4.json
code/Overlapping_methods/julia_fem_solver/: 1D_fem.jl  2Dquad_fem.jl  Manifest.toml  Project.toml  scicomp.jl
code/Overlapping_methods/matlab_codes/: LUfactor.m  additive_schwarz.m  additive_schwarz_2d.m  backward.m  cg.m  cg1.m  forward.m  inverse.m  twoleveladditive.m
code/floating_structure_infinite_membrane/: Project.toml
code/floating_structure_infinite_membrane/postprocess/tmp/: readme.md
code/floating_structure_infinite_membrane/src/: headers_and_helpers.hpp
code/floating_structure_infinite_membrane/test/: infinite_membrane_damping.jl  infinite_membrane_periodic_bcs.jl
